--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,9 @@
     <script src="/webjars/jquery/3.1.0/jquery.js"></script>
     <script src="/webjars/bootstrap/3.3.7/js/bootstrap.js"></script>
 
+    <script src="/webjars/stomp-websocket/2.3.3-1/stomp.js"></script>
+    <script src="/webjars/sockjs-client/1.1.2/sockjs.js"></script>
+
     <script src="/webjars/angularjs/1.4.3/angular.js"></script>
     <script src="/webjars/angularjs/1.4.3/angular-route.js"></script>
 
