--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="kalahApp">
 <head>
-    <title>Kalah</title>
+    <title>The Bol.com Game</title>
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="/webjars/jquery/3.1.0/jquery.js"></script>
@@ -42,7 +42,7 @@
 <nav class="navbar navbar-inverse" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#/">Kalah Boardgame</a>
+            <a class="navbar-brand" href="#/">The Bol.com Game</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
