--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,24 @@
     <script src="js/GameModule.js"></script>
 
     <style>
+        .navbar {
+            background-color: #3366CA;
+            border: 0px solid #FFFFFF;
+            color: #FFFFFF;
+        }
+        .btn-primary {
+            background-color: #3366CA;
+            border: 0px solid #FFFFFF;
+            color: #FFFFFF;
+        }
+        .btn-sq-lg {
+            background-color: #3A3A3A;
+            border: 0px solid #FFFFFF;
+            color: #FFFFFF;
+        }
+        .text-info {
+            color: black;
+        }
         .Border {
             max-width: 90%;
             padding: 20px 20px 5px 30px;
@@ -42,15 +60,15 @@
 <nav class="navbar navbar-inverse" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#/">The Bol.com Game</a>
+            <a class="navbar-brand" style="color: #FFFFFF;" href="#/">The Bol.com Game</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#/about">About</a></li>
+                <li><a style="color: #FFFFFF;" href="#/about">About</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a><strong><logged-user/></strong></a></li>
-                <li><a href="/login?logout">Logout</a></li>
+                <li><a style="color: #FFFFFF;" href="/login?logout">Logout</a></li>
             </ul>
         </div>
     </div>
